crates/formatter/tests/snapshots/snapshots__migrations__000153_agent_default_apps.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_agents drop column display_apps;
drop type display_app;
