crates/formatter/tests/snapshots/snapshots__migrations__000154_dbcrypt_key_ids.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table if not exists dbcrypt_keys (
	number int not null primary key,
	active_key_digest text unique,
	revoked_key_digest text unique,
	created_at timestamp with time zone default CURRENT_TIMESTAMP,
	revoked_at timestamp with time zone default null,
	test text not null
);

comment on table dbcrypt_keys is 'A table used to store the keys used to encrypt the database.';
comment on column dbcrypt_keys.number is 'An integer used to identify the key.';
comment on column dbcrypt_keys.active_key_digest is 'If the key is active, the digest of the active key.';
comment on column dbcrypt_keys.revoked_key_digest is 'If the key has been revoked, the digest of the revoked key.';
comment on column dbcrypt_keys.created_at is 'The time at which the key was created.';
comment on column dbcrypt_keys.revoked_at is 'The time at which the key was revoked.';
comment on column dbcrypt_keys.test is 'A column used to test the encryption.';

alter table git_auth_links add column if not exists oauth_access_token_key_id text references dbcrypt_keys (
	active_key_digest
),
add column if not exists oauth_refresh_token_key_id text references dbcrypt_keys (
	active_key_digest
);

comment on column git_auth_links.oauth_access_token_key_id is 'The ID of the key used to encrypt the OAuth access token. If this is NULL, the access token is not encrypted';
comment on column git_auth_links.oauth_refresh_token_key_id is 'The ID of the key used to encrypt the OAuth refresh token. If this is NULL, the refresh token is not encrypted';

alter table user_links add column if not exists oauth_access_token_key_id text references dbcrypt_keys (
	active_key_digest
),
add column if not exists oauth_refresh_token_key_id text references dbcrypt_keys (
	active_key_digest
);

comment on column user_links.oauth_access_token_key_id is 'The ID of the key used to encrypt the OAuth access token. If this is NULL, the access token is not encrypted';
comment on column user_links.oauth_refresh_token_key_id is 'The ID of the key used to encrypt the OAuth refresh token. If this is NULL, the refresh token is not encrypted';
