crates/formatter/tests/snapshots/snapshots__migrations__000155_workspaces_last_used_at_timestamptz.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table only workspaces alter column last_used_at set data type timestamptz using last_used_at::timestamp
at time zone 'UTC',
alter column last_used_at set default '0001-01-01 00:00:00+00:00'::timestamptz;
