crates/formatter/tests/snapshots/snapshots__migrations__000156_pg_coordinator_single_tailnet.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table tailnet_client_subscriptions (
	client_id uuid not null,
	coordinator_id uuid not null,
	-- this isn't a foreign key since it's more of a list of agents the client
	-- *wants* to connect to, and they don't necessarily have to currently
	-- exist in the db.
	agent_id uuid not null,
	updated_at timestamp with time zone not null,
	primary key (client_id, coordinator_id, agent_id),
	foreign key (coordinator_id) references tailnet_coordinators (
		id
	) on delete cascade
	-- we don't keep a foreign key to the tailnet_clients table since there's
	-- not a great way to guarantee that a subscription is always added after
	-- the client is inserted. clients are only created after the client sends
	-- its first node update, which can take an undetermined amount of time.
);

create function tailnet_notify_client_subscription_change() returns trigger language plpgsql as $$
	begin
		if (NEW is not null) then
			perform pg_notify(
				'tailnet_client_update',
				NEW.client_id || ',' || NEW.agent_id
			);
			return null;
		elsif (OLD is not null) then
			perform pg_notify(
				'tailnet_client_update',
				OLD.client_id || ',' || OLD.agent_id
			);
			return null;
		end if;
	end;
$$;

create trigger tailnet_notify_client_subscription_change after insert or update or delete on tailnet_client_subscriptions for each row execute procedure tailnet_notify_client_subscription_change();

create or replace function tailnet_notify_client_change() returns trigger language plpgsql as $$
	declare
		var_client_id uuid;
		var_coordinator_id uuid;
		var_agent_ids uuid[];
		var_agent_id uuid;
	begin
		if (NEW.id is not null) then
			var_client_id = NEW.id;
			var_coordinator_id = NEW.coordinator_id;
		elsif (OLD.id is not null) then
			var_client_id = OLD.id;
			var_coordinator_id = OLD.coordinator_id;
		end if;

		-- Read all agents the client is subscribed to, so we can notify them.
		select
			array_agg(agent_id)
		into var_agent_ids
		from tailnet_client_subscriptions subs
		where subs.client_id = NEW.id and subs.coordinator_id = NEW.coordinator_id;

		-- No agents to notify
		if (var_agent_ids is null) then
			return null;
		end if;

		-- pg_notify is limited to 8k bytes, which is approximately 221 UUIDs.
		-- Instead of sending all agent ids in a single update, send one for each
		-- agent id to prevent overflow.
		foreach var_agent_id in array var_agent_ids loop
			perform pg_notify(
				'tailnet_client_update',
				var_client_id || ',' || var_agent_id
			);
		end loop;
		return null;
	end;
$$;

alter table tailnet_clients drop column agent_id;
